# napi-oop

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  spike-dylib-split.yml
crates/napi-oop/: Cargo.toml
crates/napi-oop-facade/: Cargo.toml
crates/napi-oop-facade/src/: lib.rs
crates/napi-oop-macro/: Cargo.toml
crates/napi-oop-macro/src/: lib.rs
crates/napi-oop/src/: bootstrap.rs  codec.rs  diag.rs  lib.rs  manifest.rs  peer.rs  promise.rs  provider.rs  registry.rs  shim.rs  transport.rs  tsfn.rs  types.rs  wire.rs
crates/napi-oop/tests/: dispatch.rs  transport.rs
examples/add-numbers/: Cargo.toml  package.json  rust-parent.mjs  tsconfig.json
examples/add-numbers/provider/: Cargo.toml
examples/add-numbers/provider/src/: main.rs
examples/add-numbers/src/: lib.rs  main.rs
examples/add-numbers/ts/: main-sync.ts  main.ts
examples/native-add/: .gitignore  Cargo.toml  package.json  tsconfig.json
examples/native-add/src/: lib.rs
examples/native-add/ts/: main.ts
examples/tokio-fetch/: Cargo.toml  package.json  rust-parent.mjs
examples/tokio-fetch/provider/: Cargo.toml
examples/tokio-fetch/provider/src/: main.rs
examples/tokio-fetch/src/: lib.rs  main.rs
examples/tokio-fetch/ts/: main.ts
spikes/dylib-split/: Cargo.toml  README.md  run-spike.mjs
spikes/dylib-split/core/: Cargo.toml
spikes/dylib-split/core-dyn/: Cargo.toml
spikes/dylib-split/core-dyn/src/: lib.rs
spikes/dylib-split/core/src/: lib.rs
spikes/dylib-split/node-addon/: Cargo.toml
spikes/dylib-split/node-addon/src/: lib.rs
spikes/dylib-split/provider/: Cargo.toml
spikes/dylib-split/provider/src/: main.rs
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/ts/: main.ts
tests/e2e/: child-exits-early.test.mjs  external-gc.test.mjs  inproc.test.mjs  keepalive.test.mjs  node-parent.test.mjs  order.test.mjs  package.json  run.mjs  rust-parent.mjs  rust-parent.test.mjs  stage-inproc.mjs  sync.test.mjs  tsconfig.json
tests/e2e/fixture/: Cargo.toml
tests/e2e/fixture/src/: lib.rs  main.rs
tests/e2e/provider/: Cargo.toml
tests/e2e/provider/src/: main.rs
tests/e2e/ts/: run-all.ts  run-gc.ts  run-keepalive.ts  run-order.ts  run-sync.ts
