[workspace]
resolver = "2"
members = [
    "crates/napi-oop",
    "crates/napi-oop-macro",
    "examples/add-numbers",
]
# The Phase 0 spike is a self-contained throwaway with its own lockfile.
exclude = ["spike/rust"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SteveSandersonMS/napi-pipe"
rust-version = "1.75"

[profile.release]
lto = true
strip = "symbols"
