[workspace]
resolver = "2"
members = [
    "crates/napi-oop",
    "crates/napi-oop-macro",
    "crates/napi-oop-facade",
    "examples/add-numbers",
    "examples/add-numbers/provider",
    "examples/tokio-fetch",
    "examples/tokio-fetch/provider",
    "tests/e2e/fixture",
    "tests/e2e/provider",
]
exclude = [
    "examples/native-add",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SteveSandersonMS/napi-pipe"
rust-version = "1.75"

[profile.release]
lto = true
strip = "symbols"
