[package]
name = "napi-oop-facade"
description = "Drop-in `napi` path: existing #[napi] source uses `napi::...` and builds a dual-ABI cdylib (real napi in-proc + napi-oop out-of-proc) from one source."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Compiled as `napi` so unmodified napi-rs source (`use napi::ThreadsafeFunction`,
# `napi::bindgen_prelude::*`) resolves here. The facade re-exports the real napi
# surface (so napi-derive's generated code resolves) and overrides the handful of
# value types with napi-oop's unified equivalents (which bridge BOTH ABIs).
[lib]
name = "napi"
path = "src/lib.rs"

[dependencies]
napi-oop = { path = "../napi-oop" }
napi-oop-macro = { path = "../napi-oop-macro" }
napi = { version = "3", default-features = false, features = ["napi4", "napi6", "tokio_rt"] }
napi-derive = { version = "3", features = ["type-def"] }
