[package]
name = "napi-oop-facade"
description = "Drop-in `napi` path: existing #[napi] source uses `napi::...` and builds a dual-ABI cdylib (real napi in-proc + napi-oop out-of-proc) from one source."
version.workspace = true
edition.workspace = true
license = "MIT"
repository.workspace = true
rust-version.workspace = true

# Compiled as `napi` so unmodified napi-rs source (`use napi::ThreadsafeFunction`,
# `napi::bindgen_prelude::*`) resolves here. The facade re-exports the real napi
# surface (so napi-derive's generated code resolves) and overrides the handful of
# value types with napi-oop's unified equivalents (which bridge BOTH ABIs).
[lib]
name = "napi"
path = "src/lib.rs"

# Passthrough features so a consumer can enable the corresponding napi-rs
# feature on the (renamed) `napi` crate this facade re-exports, e.g.
# `napi = { package = "napi-oop-facade", features = ["async", "serde-json"] }`.
# These map straight onto the inner real napi-rs dependency; because that inner
# crate is the same `napi` package the rest of the build graph sees, the enabled
# features unify across every crate that depends on napi.
[features]
async = ["real-napi/async"]
serde-json = ["real-napi/serde-json"]
dyn-symbols = ["real-napi/dyn-symbols"]
object-indexmap = ["real-napi/object_indexmap"]

[dependencies]
napi-oop = { path = "../napi-oop" }
napi-oop-macro = { path = "../napi-oop-macro" }
# The real napi-rs crate. This facade's own lib is compiled as `napi` (so
# consumers' `napi::…` paths resolve here), so we MUST import real napi-rs under
# a distinct name. Referencing it as `::napi` would make rustc search the deps
# dir by filename and find two `libnapi-*.rlib` candidates (this facade's own
# output and real napi's), yielding E0464. A renamed dep is bound via an
# explicit `--extern real_napi=<path>`, so there is no ambiguous lookup.
#
# `dyn-symbols` matches napi-oop's own napi dependency (they unify to one build):
# napi symbols are resolved from the host process at runtime, so the dual-ABI
# cdylib carries no hard napi symbol dependency on any platform. See the note on
# napi-oop's `napi` dependency for the full rationale.
real-napi = { package = "napi", version = "3", default-features = false, features = ["napi4", "napi6", "tokio_rt", "dyn-symbols"] }
# Not referenced directly: this enables napi-derive's `type-def` feature, which
# unifies onto the single napi-derive crate the dual-emit macro delegates to via
# `::napi_oop::__derive`. Every real cdylib build depends on this facade, so this
# is what turns on `.d.ts` generation across the whole graph.
napi-derive = { version = "3", features = ["type-def"] }
