[package]
name = "napi-oop-macro"
description = "The #[napi] attribute macro for napi-oop (in-process or out-of-process build modes)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
# Default: behave like a normal in-process napi-rs build.
default = ["in-proc"]
in-proc = []
# Opt-in: emit out-of-process remoting glue instead.
out-of-proc = []

[dependencies]
