[package]
name = "napi-oop-macro"
description = "The #[napi] attribute macro for napi-oop: emits the real napi ABI plus out-of-process remoting glue from one source."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
