[package]
name = "napi-oop"
description = "Out-of-process runtime for napi-style Node <-> Rust bindings."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Real napi-rs: the unified value/callback types implement its `FromNapiValue`/
# `ToNapiValue`/`TypeName`/`ValidateNapiValue` traits so `#[napi]` codegen accepts
# them on the in-proc door, while their serde impls carry them on the wire door.
napi = { version = "3", default-features = false, features = ["napi4", "napi6", "tokio_rt"] }
# Re-exported at `::napi_oop::__derive::napi` so the dual-emit macro can delegate
# the in-proc ABI to the real napi-derive without every consumer needing a direct
# napi-derive dependency. `type-def` (for `.d.ts` generation) is enabled by the
# facade and unifies onto this same crate in real cdylib builds.
napi-derive = { version = "3", default-features = false }
interprocess = "2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
inventory = "0.3"
pollster = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }

[features]
# Tokio is on by default: the target workloads are async/tokio, so block_on
# uses a shared multi-thread runtime (timers/IO work). Disable default features
# to fall back to pollster (no reactor) for purely CPU-bound `.await`s.
default = ["tokio"]
tokio = ["dep:tokio"]

[dev-dependencies]
napi-oop-macro = { path = "../napi-oop-macro" }
# The wire-glue regression tests apply `#[napi]`; the real `napi` crate must be
# in scope for the in-proc ABI half to link (it is never invoked under `cargo
# test`). The real napi-derive reaches the tests via `::napi_oop::__derive`.
napi = { version = "3", default-features = false, features = ["napi4", "napi6", "tokio_rt"] }
