[package]
name = "napi-oop"
description = "Out-of-process runtime for napi-style Node <-> Rust bindings."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Real napi-rs: the unified value/callback types implement its `FromNapiValue`/
# `ToNapiValue`/`TypeName`/`ValidateNapiValue` traits so `#[napi]` codegen accepts
# them on the in-proc door, while their serde impls carry them on the wire door.
#
# `dyn-symbols` makes napi-rs resolve the `napi_*` C API from the host *process*
# at runtime (via `dlopen`/module registration) instead of linking them at build
# time. This is essential to the dual-ABI design: the single cdylib then has NO
# hard napi symbol dependency on any platform, so (a) Node loads it in-process and
# napi-rs binds the symbols from the Node process on registration, and (b) a thin
# Rust host can dlopen the very same artifact for the out-of-process door without
# a Node runtime -- the napi symbols simply stay unresolved panic stubs that the
# out-of-process path never calls. It also lets every executable that links this
# crate (unit/integration test harnesses) build and load on macOS/Linux, which
# otherwise reject the undefined napi symbols. Windows already uses this path
# unconditionally, so this only aligns the other platforms with it.
napi = { version = "3", default-features = false, features = ["napi4", "napi6", "tokio_rt", "dyn-symbols"] }
# Re-exported at `::napi_oop::__derive::napi` so the dual-emit macro can delegate
# the in-proc ABI to the real napi-derive without every consumer needing a direct
# napi-derive dependency. `type-def` (for `.d.ts` generation) is enabled by the
# facade and unifies onto this same crate in real cdylib builds.
napi-derive = { version = "3", default-features = false }
interprocess = "2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
inventory = "0.3"
pollster = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }

[features]
# Tokio is on by default: the target workloads are async/tokio, so block_on
# uses a shared multi-thread runtime (timers/IO work). Disable default features
# to fall back to pollster (no reactor) for purely CPU-bound `.await`s.
default = ["tokio"]
tokio = ["dep:tokio"]

[dev-dependencies]
napi-oop-macro = { path = "../napi-oop-macro" }
# The wire-glue regression tests apply `#[napi]`; the real `napi` crate must be
# in scope for the in-proc ABI half to link (it is never invoked under `cargo
# test`). The real napi-derive reaches the tests via `::napi_oop::__derive`.
# `dyn-symbols` (see the [dependencies] entry) keeps the test harness free of
# undefined napi symbols so it links and loads on macOS/Linux.
napi = { version = "3", default-features = false, features = ["napi4", "napi6", "tokio_rt", "dyn-symbols"] }
