[package]
name = "add-numbers-example"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "add-numbers-provider"
path = "src/main.rs"

[dependencies]
napi-oop = { path = "../../crates/napi-oop" }
napi = { package = "napi-oop-facade", path = "../../crates/napi-oop-facade", features = ["out-of-proc"] }
