[package]
name = "add-numbers-example"
version.workspace = true
edition.workspace = true
publish = false

# The dual-ABI artifact: ONE cdylib that Node loads in-process as a normal napi
# addon (real napi ABI) AND a thin Rust host (examples/add-numbers/provider)
# dlopens to serve a Node child out-of-process via napi-oop. The provider entry
# is exported as a C symbol the host exe resolves; see `add_numbers_provider_main`.
[lib]
name = "add_numbers_example"
crate-type = ["cdylib"]

[dependencies]
napi-oop = { path = "../../crates/napi-oop" }
napi = { package = "napi-oop-facade", path = "../../crates/napi-oop-facade" }

[build-dependencies]
napi-build = "2"

