[package]
name = "tokio-fetch-example"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "tokio-fetch-provider"
path = "src/main.rs"

[dependencies]
napi-oop = { path = "../../crates/napi-oop", features = ["tokio"] }
napi-oop-macro = { path = "../../crates/napi-oop-macro", features = ["out-of-proc"] }
tokio = { version = "1", features = ["time"] }
