[package]
name = "tokio-fetch-example"
version.workspace = true
edition.workspace = true
publish = false

# The dual-ABI artifact: ONE cdylib that Node loads in-process as a normal napi
# addon (real napi ABI) AND a thin Rust host (examples/tokio-fetch/provider)
# dlopens to serve a Node child out-of-process via napi-oop. The provider entry
# is exported as a C symbol the host exe resolves; see `tokio_fetch_provider_main`.
[lib]
name = "tokio_fetch_example"
crate-type = ["cdylib"]
# Load-only artifact (see add-numbers): no Rust unit tests, so no `cargo test`
# harness is built. Exercised by the e2e suite.
test = false

[dependencies]
napi-oop = { path = "../../crates/napi-oop", features = ["tokio"] }
napi = { package = "napi-oop-facade", path = "../../crates/napi-oop-facade" }
tokio = { version = "1", features = ["time"] }

[build-dependencies]
napi-build = "2"
