[package]
name = "tokio-fetch-provider-host"
version.workspace = true
edition.workspace = true
publish = false

# A deliberately thin host: it does NOT statically link the runtime. It dlopens
# the sibling dual-ABI cdylib (the same artifact Node loads in-process) and calls
# its exported `tokio_fetch_provider_main` entry. This proves ONE build output
# serves both the in-process (Node require) and out-of-process (Rust host) modes.
[[bin]]
name = "tokio-fetch-provider"
path = "src/main.rs"

[dependencies]
libloading = "0.8"
