[package]
name = "spike-core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "spike_core"
# Plain rlib: the business logic source of truth. On dynamic-linking targets it
# is wrapped by `core-dyn` (a dylib) so its code lives once and is shared; on
# musl (which cannot produce a Rust dylib) the wrappers link this rlib directly
# and statically.
crate-type = ["rlib"]
