[package]
name = "spike-node-addon"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "spike_node_addon"
# cdylib so Node can dlopen it (renamed to .node by the orchestrator).
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

# On dynamic targets link the shared core dylib; on musl link the core rlib
# statically. Two distinct dependency names (each a single canonical path),
# aliased to `shared` in source via cfg.
[target.'cfg(not(target_env = "musl"))'.dependencies]
spike-core-dyn = { path = "../core-dyn" }

[target.'cfg(target_env = "musl")'.dependencies]
spike-core = { path = "../core" }

[build-dependencies]
napi-build = "2"
