[package]
name = "spike-provider"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "spike-provider"
path = "src/main.rs"

[target.'cfg(not(target_env = "musl"))'.dependencies]
spike-core-dyn = { path = "../core-dyn" }

[target.'cfg(target_env = "musl")'.dependencies]
spike-core = { path = "../core" }
