[package]
name = "napi-oop-e2e-fixture"
version.workspace = true
edition.workspace = true
publish = false

# The dual-ABI artifact: ONE cdylib that Node loads in-process as a normal napi
# addon (real napi ABI) AND a thin Rust host dlopens to serve a Node child
# out-of-process (napi-oop). The provider entry is exported as a C symbol the
# host exe resolves; see `napi_oop_e2e_main`.
[lib]
crate-type = ["cdylib"]
# Load-only artifact (see add-numbers): no Rust unit tests; its real-napi in-proc
# code references `napi_*` symbols only a Node host provides. Exercised by e2e.
test = false

[dependencies]
napi-oop = { path = "../../../crates/napi-oop" }
napi = { package = "napi-oop-facade", path = "../../../crates/napi-oop-facade" }

[build-dependencies]
napi-build = "2"
